<resources>
    <string name="app_name">PickingApp</string>
    <string name="error_messages">Errores de inicio de sesión</string>
    <string name="login_message">Iniciar Sesión</string>
    <string name="pass">Contraseña</string>
    <string name="user">Usuario</string>
    <string name="logo_description">Logo Distribuidora Mayorista del Cauca</string>
    <string name="client">Cliente</string>
    <string name="document">Documento</string>
    <string name="city">Ciudad</string>
    <string name="main_phone">Telefono Principal</string>
    <string name="secondary_phone">Telefono Secundario</string>
    <string name="business">Negocio</string>
    <string name="mail">Correo</string>
    <string name="customer_details">Detalles del Cliente</string>
    <string name="name">Nombre</string>
    <string name="surname">Apellido</string>
    <string name="phone_number">Numero Telefonico</string>
    <string name="everything">Todo</string>
    <string name="cell_phone_number">Numero Celular</string>
    <string name="logo_contactos">Logo de Contactos</string>
    <string name="search_title">Buscar</string>
    <string name="title_activity_bottom_navigation">BottomNavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_search">Buscar</string>
    <string name="title_order">Pedido</string>
    <string name="title_update">Actualizar</string>
    <string name="edit_user">Editar Usuario</string>
    <string name="edit">Editar</string>
    <string name="cancel">Cancelar</string>
    <string name="state">Estado</string>
    <string name="order">Pedido</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>