<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondo"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imagen_contacto"
            android:layout_width="match_parent"
            android:layout_height="141dp"
            android:contentDescription="@string/everything" />

        <TextView
            android:id="@+id/contacto_nombre"
            android:layout_width="match_parent"
            android:textColor="@color/White"
            android:textSize="30sp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text=""
            tools:text="@string/name" />

        <TextView
            android:id="@+id/contacto_numero_telefonico_00"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sin_bordes"
            android:drawableStart="@drawable/ic_telefono_02"
            android:gravity="center"
            android:padding="10dip"
            android:text=""
            tools:text="@string/cell_phone_number" />

        <TextView
            android:id="@+id/contacto_numero_telefonico_01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_telefono_01"
            android:text=""
            android:padding="10dip"
            android:background="@drawable/btn_sin_bordes"
            android:gravity="center"
            tools:text="@string/phone_number" />

        <TextView
            android:id="@+id/contacto_correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_sin_bordes"
            android:drawableStart="@drawable/ic_correo"
            android:gravity="center"
            android:text=""
            android:padding="10dip"
            tools:text="@string/mail" />


    </LinearLayout>

</androidx.cardview.widget.CardView>