<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_azul"
    android:orientation="vertical"
    tools:context=".ClientDetailActivity">

    <TextView
        android:id="@+id/editText"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:drawableStart="@drawable/ic_persona"
        android:ems="10"
        android:gravity="center"
        android:padding="5dip"
        android:text="@string/client"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvNombreCliente"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:text=""
        android:textColor="@color/White"
         />

    <TextView
        android:id="@+id/editText2"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:drawableStart="@drawable/ic_documento"
        android:ems="10"
        android:gravity="center"
        android:text="@string/document"
        android:textSize="18sp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/tvDocumento"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:text=""
        android:textColor="@color/White"
         />

    <TextView
        android:id="@+id/tvCiudad"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:text=""
        android:textColor="@color/White"
        />

    <TextView
        android:id="@+id/editText3"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:drawableStart="@drawable/ic_ciudad"
        android:ems="10"
        android:gravity="center"
        android:text="@string/city"
        android:textSize="18sp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/tvTel_01"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:text=""
        android:textColor="@color/White"
         />

    <TextView
        android:id="@+id/editText4"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:drawableStart="@drawable/ic_telefono_01"
        android:ems="10"
        android:gravity="center"
        android:text="@string/main_phone"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvTel_02"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:text=""
        android:textColor="@color/White"
         />

    <TextView
        android:id="@+id/editText5"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:drawableStart="@drawable/ic_telefono_02"
        android:ems="10"
        android:gravity="center"
        android:text="@string/secondary_phone"
        android:textSize="18sp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/tvNegocio"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:layout_marginStart="5dp"
        android:text=""
        android:textColor="@color/White"
         />

    <TextView
        android:id="@+id/editText6"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:drawableStart="@drawable/ic_negocio"
        android:ems="10"
        android:gravity="center"
        android:text="@string/business"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvDetalle"
        android:layout_width="236dp"
        android:layout_height="63dp"
        android:gravity="center"
        android:text="@string/customer_details"
        android:textColor="@color/White"
        android:textSize="25sp"
        android:textStyle="bold"
         />

    <TextView
        android:id="@+id/tvCorreo"
        android:layout_width="200dp"
        android:layout_height="46dp"
        android:text=""
        android:textColor="@color/White"
        tools:layout_editor_absoluteX="236dp"
        tools:layout_editor_absoluteY="530dp" />

    <TextView
        android:id="@+id/editText7"
        android:layout_width="170dp"
        android:layout_height="46dp"
        android:drawableStart="@drawable/ic_correo"
        android:ems="10"
        android:gravity="center"
        android:text="@string/mail"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="30dp"
        tools:layout_editor_absoluteY="530dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.15" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.35" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.45" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <!-- CUADRICULA DE GUIAS HORIZONTALES -->

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline21"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline27"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />




</androidx.constraintlayout.widget.ConstraintLayout>